// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MPageNotFound should render correctly 1`] = `
<div>
    <m-message state="warning">
        <m-i18n k="m-page-not-found:message"></m-i18n>
    </m-message>
    <p>
        <m-i18n k="m-page-not-found:directions"></m-i18n>
    </p>
    <p></p>
    <m-link mode="link">
        m-page-not-found:back-to-portal
    </m-link>
</div>
`;

exports[`MPageNotFound should render correctly with back-to-label override 1`] = `
<div>
    <m-message state="warning">
        <m-i18n k="m-page-not-found:message"></m-i18n>
    </m-message>
    <p>
        <m-i18n k="m-page-not-found:directions"></m-i18n>
    </p>
    <p></p>
    <m-link mode="link">
        Some back to label
    </m-link>
</div>
`;
